# BadOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  REMINDER
.zed/: debug.json  settings.json  tasks.json
cmake/: Limine.cmake
font/: CMakeLists.txt  README.MD
kernel/: CMakeLists.txt  boot.s  kmain.cpp
kernel/include/: error.hpp  framebuffer.hpp  memory.hpp  utils.hpp
kernel/include/console/: console.hpp
kernel/include/cpu/: cpu.h  gdt.hpp  memory.hpp
kernel/include/font/: font.hpp
kernel/src/: framebuffer.cpp  kmain.cpp
kernel/src/console/: console.cpp
kernel/src/console/font/: font.cpp
kernel/src/cpu/: cpuid.s  gdt.cpp  memory.cpp
kernel/src/font/: font.cpp
libbad/: CMakeLists.txt
libbad/include/libbad/: color.hpp  debugger.hpp  memory.hpp  result.hpp  span.hpp  string_view.hpp
libbad/src/: memory.cpp
sysroot/boot/grub/: grub.cfg
sysroot/boot/limine/: limine.conf
toolchain/: linker.ld  x86_64-elf.cmake
